--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -79,7 +79,7 @@ Excitatory reversal potential  & -0.0 mV 	               \\\hline
   		\caption{Spikes with big lateral inhibition.}
   		\label{fig:sub2}
 	\end{subfigure}
-	\caption[Spikes in a hidden layer of a spiking RBM with different kinds of lateral inhibition.]{Spikes in a hidden layer of a spiking RBM with lateral inhibition. As the lateral inhibition increases, the activity becomes more sparse. In the case with big inhibitory weights, there are a few neurons dominating the activity allowing only a few different states of the network and thus poor mode switching in a training step. In a network with small inhibitory weights, there is sparse activity, but the the network visits many different states in a simulation step and shows sufficient mode mixing. }
+	\caption[Spikes in a hidden layer of a spiking RBM with different kinds of lateral inhibition.]{Spikes in a hidden layer of a spiking RBM with lateral inhibition. As the lateral inhibition increases, the activity becomes more sparse. In the case with big inhibitory weights, there are a few neurons dominating the activity allowing only a few different states of the network and thus poor mode switching in a training step. In a network with small inhibitory weights, there is sparse activity, but the network visits many different states in a simulation step and shows sufficient mode mixing. }
 	\label{fig:dbnmixing}
 \end{figure}
    
