--- a/content/backgrnd.tex
+++ b/content/backgrnd.tex
@@ -25,7 +25,7 @@ This allows a less complex description of the probability density with basic fac
 How to build a PGM and set the parameters for a given problem is still an active research topic \cite{Ghahramani2002}\cite{Zhou2007}.
 There exist different approaches such as the SGS algorithm \cite{Zhou2007} or EM algorithms \cite{Ghahramani2002}, but in the following we use Boltzmann machines and the contrastive divergence algorithm to build up and determine the parameters in a PGM (see Chapter \ref{c:bms}).
 
-PGMs can be be divided into two basic categories, models with directed graphs and models with undirected graphs.
+PGMs can be divided into two basic categories, models with directed graphs and models with undirected graphs.
 
 
 \subsection{Bayesian Networks} \label{c:bayesnet}
@@ -115,7 +115,7 @@ The clique potential for each state always has to be greater or equal to zero, b
 	\begin{subfigure}[t]{.5\textwidth}
   		\centering
   		\includegraphics[width=.5\linewidth]{imgs/markovnet1.png}
-  		\caption{A Markov network with with 5 nodes.}
+  		\caption{A Markov network with 5 nodes.}
   		\label{fig:markovnet1}
 	\end{subfigure}%
 	\begin{subfigure}[t]{.5\textwidth}
@@ -1097,7 +1097,7 @@ This will show further application as a stochastically firing neuron model used 
 \begin{figure}
 	\centering
     	\includegraphics[width=0.6\textwidth]{imgs/hcs.png} 
-    \caption[A membrane potential trajectory of a neuron in a high conductance state.]{A membrane potential trajectory of a neuron in a high conductance state. (a) The spike train and the membrane potential. (b) The blue curve represents the actual membrane potential with refractory periods after each spike, while the red curve represents a membrane potential without a firing threshold. It is apparent that the blue curve returns the the hypothetical red potential without a "return from rest" time  \cite{Petrovici2016}. }
+    \caption[A membrane potential trajectory of a neuron in a high conductance state.]{A membrane potential trajectory of a neuron in a high conductance state. (a) The spike train and the membrane potential. (b) The blue curve represents the actual membrane potential with refractory periods after each spike, while the red curve represents a membrane potential without a firing threshold. It is apparent that the blue curve returns to the hypothetical red potential without a "return from rest" time  \cite{Petrovici2016}. }
     % Petrovici
 	\label{fig:hcs}
 \end{figure}
