--- a/preface/abstract.tex
+++ b/preface/abstract.tex
@@ -13,7 +13,7 @@ Both algorithms are evaluated on different discrete and event-based datasets.
 On the different datasets the algorithms are able to discriminate classes with high accuracy without any modification of the learning rules, thus indicating an adaptive feature extraction algorithm.
 By comparing both approaches it becomes apparent that by introducing lateral inhibitory connections the directly trained algorithm is able to extract more discriminative features.
  
-\chapter*{Abstrakt}
+\chapter*{Zusammenfassung}
 
 Die automatische Extraktion von "High-Level Features" unterstützt und erleichtert Aufgaben wie Klassifikation und Prädiktion.
 Mit Hilfe von Deep Belief Networks können solche Feature Extraktoren unüberwacht gelernt werden.
