--- a/content/concl.tex
+++ b/content/concl.tex
@@ -27,7 +27,7 @@ This could be a principle CNNs utilize to get biological plausible result, while
 
 Another biological not completely plausible part of our presented system are the bidirectional synapses.
 This in turn could be easily translated to two directional synapses with some weight synchronization. 
-While in this case local updates are sufficient to keep the weights similar (e.g., applying a similar learning rule to both weights) and research on discrete NNs has shown some automatic weight synchronization in Autoencoders \cite{vincent2010stacked}, there is no biological proof.
+While in this case local updates are sufficient to keep the weights similar (e.g., applying a similar learning rule to both weights) and research on discrete NNs has shown some automatic weight synchronization in autoencoders \cite{vincent2010stacked}, there is no biological proof.
 The STDP flag determining either completely positive or negative and dividing the training into different phases does not appear to be plausible as well.
 
 Even so this system has many constrains, it might could be counted among one of the more biological plausible deep learning architectures \cite{bengio2015towards}.     
