--- a/content/intro.tex
+++ b/content/intro.tex
@@ -29,7 +29,7 @@ Spiking neural networks (SNNs) designed to simulate the communication between ne
 To the best of our knowledge, up to today, no system which utilizes the benefits of a convolutional architecture, spiking neural networks and deep belief networks altogether has been suggested. 
 The main objective of the presented thesis is to realize such a spiking network which integrates convolution and can be easily trained utilizing an RBM learning algorithm in order to extract high level features. 
 Two approaches are explored. 
-The first approach trains convolutional RBMs on discretized input data to build up a DBN which is then converted to a SNN. 
+The first approach trains convolutional RBMs on discretized input data to build up a DBN which is then converted to an SNN. 
 The second approach learns from continuous, event-driven input-data and adapts the synaptic weights with a plasticity rule with shared weights to train spiking convolutional RBMs directly. 
 Both approaches will learn to extract high level features which can be further used to classify an object. 
 
